--- a/Blueprints.ipynb
+++ b/Blueprints.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
