--- a/Blueprints.ipynb
+++ b/Blueprints.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
@@ -24,7 +28,9 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -34,7 +40,7 @@
     "        tk.Tk.__init__(self, *args, **kwargs)\n",
     "        \n",
     "        #tk.Tk.iconbitmap(self, default=\"clienticon.ico\")\n",
-    "        tk.Tk.wm_title(self,  \"Sea of BTC Client\")\n",
+    "        tk.Tk.wm_title(self,  \"Label helper\")\n",
     "\n",
     "        container = tk.Frame(self)\n",
     "        container.pack(side=\"top\", fill=\"both\", expand=True)\n",
@@ -168,6 +174,9 @@
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -195,7 +204,11 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -213,7 +226,11 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "test = Dataset('data.txt')"
@@ -222,7 +239,11 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -245,7 +266,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "X = np.linspace(-3*np.pi, 3*np.pi, 10000)\n",
@@ -257,7 +282,9 @@
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -267,7 +294,11 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -287,7 +318,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "for i in range(10):\n",
@@ -311,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
