--- a/Blueprints.ipynb
+++ b/Blueprints.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +36,7 @@
     "        tk.Tk.__init__(self, *args, **kwargs)\n",
     "        \n",
     "        #tk.Tk.iconbitmap(self, default=\"clienticon.ico\")\n",
-    "        tk.Tk.wm_title(self,  \"Sea of BTC Client\")\n",
+    "        tk.Tk.wm_title(self,  \"Label helper\")\n",
     "\n",
     "        container = tk.Frame(self)\n",
     "        container.pack(side=\"top\", fill=\"both\", expand=True)\n",
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -176,12 +178,8 @@
      "output_type": "stream",
      "text": [
       "ok\n",
-      "ok\n",
-      "ok\n",
-      "ok\n",
-      "ok\n",
-      "ok\n",
-      "ok\n",
+      "bad\n",
+      "bad\n",
       "ok\n",
       "ok\n"
      ]
@@ -213,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test = Dataset('data.txt')"
@@ -245,7 +245,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = np.linspace(-3*np.pi, 3*np.pi, 10000)\n",
@@ -287,7 +289,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i in range(10):\n",
